--- a/src/Pages/Shared/Navigation/Navigation.css
+++ b/src/Pages/Shared/Navigation/Navigation.css
@@ -2,3 +2,16 @@
     width: 68px;
     height: 68px;
 }
+
+.user-img {
+    border-radius: 50%;
+    width: 48px;
+    height: 48px;
+    /* margin-left: 5%; */
+    border: none;
+    margin-right: 10px;
+}
+
+.user-info{
+    align-items: baseline;
+}
